@@ -1,19 +1,0 @@
-package NewCode;
-
-public class FolderNameAndPath {
-    private String name;
-    private String path;
-
-    public FolderNameAndPath(String name, String path) {
-        this.name = name;
-        this.path = path;
-    }
-
-    public String getName() {
-        return this.name;
-    }
-
-    public String getPath() {
-        return this.path;
-    }
-}
