@@ -1,11 +1,5 @@
 package NewCode;
 
-import java.io.File;
-import java.io.IOException;
-import java.nio.file.Files;
-import java.nio.file.Path;
-import java.nio.file.StandardCopyOption;
-
 public class Music extends Folder {
     protected String[] extensions = {"mp3", "wav", "flac", "m4a"};
 
@@ -17,12 +11,6 @@ public class Music extends Folder {
         return extensions;
     }
     
-    @Override
-    public void organizeFile(File file, String fileName, String sourceFolder) throws IOException {
-        Path sourcePath = file.toPath();
-        Path destinationPath = Path.of(sourceFolder, folderName, fileName);
-        Files.move(sourcePath, destinationPath, StandardCopyOption.REPLACE_EXISTING);
-    }
 
     @Override
     public String toString() {
